--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>Nick Zarras's Portofolio</h1>
     <h2>I am trying to become a web developer and a programmer</h2>
     <hr>
-    <h3><a href="public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="assets/images/movies.png" height="200" alt="movie-ranking review">
-    <h3><a href="public/birthday-invite.html">Birthday Invite Project</a></h3>
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="assets/images/birthday.png" height="200" alt="birthday image">
     <hr>
     <a href="public/about.html">About Me</a>
